plugins {
    id 'org.springframework.boot' version '2.7.4'
    id 'io.spring.dependency-management' version '1.0.14.RELEASE'
    id 'java'
    id 'org.jetbrains.kotlin.jvm' version '1.4.30'
}

group = 'com.gomezrondon'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '19'

repositories {
    mavenCentral()
}

dependencies {
  //  implementation 'org.springframework.boot:spring-boot-starter-web'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.h2database:h2'
//    implementation 'com.github.javafaker:javafaker:1.0.2'
    implementation "org.jetbrains.kotlin:kotlin-stdlib"
    implementation group: 'org.jetbrains.kotlinx', name: 'kotlinx-coroutines-core', version: '1.3.5'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

tasks.named('test') {
    useJUnitPlatform()
}


compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}

bootRun {
    systemProperties = [
            'spring.profiles.active': System.getProperty("profile") ?: "normal",
            'app.trigger.error': System.getProperty("error") ?: "false",
            'app.total.records': System.getProperty("records") ?: "100000",
            'app.core.count': System.getProperty("cores") ?: "0",
            'app.chunk.percent': System.getProperty("chunk") ?: "0.10",
            'app.restore': System.getProperty("restore") ?: "false"
    ]
}
